# devtools-arch4edu

./: CMakeLists.txt  pacman-arch4edu.conf  pacman-multilib-arch4edu.conf
